# atanua

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  readme.md  tags
data/: Thumbs.db  vera14.fnt  vera31.fnt
src/: CMakeLists.txt
src/8051/: CMakeLists.txt  opcodes.c
src/basecode/: CMakeLists.txt  angelcodefont.cpp  toolkit.cpp
src/chip/: CMakeLists.txt
src/core/: AtanuaConfig.cpp  CMakeLists.txt  cocoadialogs.m  main.cpp  nativefunctions.cpp  pluginchip.cpp
src/glee/: CMakeLists.txt
src/include/: atanua.h  atanua_internal.h  chip2051.h  toolkit.h
src/include/plugin/: atanua_dll_interface.h
src/stb/: CMakeLists.txt
